--- a/ARM/bin/ARM.dll.config
+++ b/ARM/bin/ARM.dll.config
@@ -4,25 +4,42 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
+      <remove name="ChartImageHandler" />
+      <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST"
+        path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </handlers>
+  </system.webServer>
   <system.web>
+    <httpHandlers>
+      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        validate="false" />
+    </httpHandlers>
+    <pages>
+      <controls>
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
+          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      </controls>
+    </pages>
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
         <add assembly="System.Web.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
   </appSettings>
   <connectionStrings>
-    <add name="ConString" connectionString="Data Source=localhost;Initial Catalog=ARM;Integrated Security=True;"
-      providerName="System.Data.SqlClient" />
-    <add name="ARMEntities" connectionString="metadata=res://*/ARMDataModel.csdl|res://*/ARMDataModel.ssdl|res://*/ARMDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRASAD;initial catalog=ARM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="ARMConnectionString" connectionString="Data Source=PRASAD;Initial Catalog=ARM;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
+    <add name="ConString" connectionString="Data Source=localhost;Initial Catalog=ARM;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="ARMEntities" connectionString="metadata=res://*/ARMDataModel.csdl|res://*/ARMDataModel.ssdl|res://*/ARMDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRASAD;initial catalog=ARM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="ARMConnectionString" connectionString="Data Source=PRASAD;Initial Catalog=ARM;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.codedom>
     <compilers>
