--- a/ARM/Web.config
+++ b/ARM/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -17,8 +17,12 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
   <connectionStrings>
-    <add name="ConString" connectionString="Data Source=localhost;Initial Catalog=ARM;Integrated Security=True;" providerName="System.Data.SqlClient"/>
-    <add name="ARMEntities" connectionString="metadata=res://*/ARMDataModel.csdl|res://*/ARMDataModel.ssdl|res://*/ARMDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRASAD;initial catalog=ARM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="ConString" connectionString="Data Source=localhost;Initial Catalog=ARM;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
+    <add name="ARMEntities" connectionString="metadata=res://*/ARMDataModel.csdl|res://*/ARMDataModel.ssdl|res://*/ARMDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PRASAD;initial catalog=ARM;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="ARMConnectionString" connectionString="Data Source=PRASAD;Initial Catalog=ARM;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
